tests/baselines/reference/parserMemberAccessorDeclaration16.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration16.ts (1 errors) ====
    class C {
       set Foo(a = 1) { }
               ~~~~~
!!! parserMemberAccessorDeclaration16.ts(2,12): error TS1052: 'set' accessor parameter cannot have an initializer.
    }